--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -114,3 +114,35 @@
     * [15.5 结束语](15.5结束语)
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
+
+# 第1章 开始启程——你的第一行Android代码
+
+2003年10月，Andy Rubin等人创办了Android公司，2005年8月谷歌收购了这家仅仅成立了22个月的公司，并让Andy Rubin继续负责Android项目。2008年谷歌推出了Android系统的第一个版本。
+
+由于谷歌的开发政策，任何手机厂商和个人都能免费获取到Android操作系统的源码，并且可以自由地使用和定制。
+
+## 1.1 了解全貌——Android王国简介
+
+### 1.1.1 Android 系统架构
+
+Android大致可以分为四层架构：Linux内核层、系统运行库层、应用框架层和应用层。
+
+1.Linux内核层
+
+Android系统是基于Linux内核的，这一层为Android设备的各种硬件提供了底层的驱动，如显示驱动、音频驱动、照相机驱动、蓝牙驱动、Wi-Fi驱动、电源管理等。
+
+2.系统运行库层
+
+这一层通过一些C/C++库来为Android系统提供了主要的特性支持。如SQLite库提供了数据库的支持，OpenGl|ES库提供了3D绘图的支持，Webkit库提供了浏览器内核的支持等。
+
+同样这一层还有Android运行时库，它主要提供了一些核心库，能够允许开发者使用Java语言来编写Android应用。另外，Android运行库中还包含了Dalvik虚拟机（5.0系统之后改为ART运行环境），它使得每一个Android应用都能运行在独立的进程中，并且拥有一个自己的Dalvik虚拟机示例。相较于Java虚拟机，Dalvik是专门为移动设备定制的，它针对手机内存、CPU性能有限等情况做了优化处理。
+
+3.应用框架层
+
+这一层主要提供了构建应用程序时可能用到的各种API,Andorid自带的一些核心应用就是使用这些API完成的，开发者也可以通过使用这些API来构建自己的应用程序。
+
+4.应用层
+
+所有安装在手机上的应用程序都是属于这一层的，比如系统自带的联系人、短信等程序，或者是你从Google Play上下载的小游戏，当然还包括你自己开发的程序。
+
+![image](https://developer.android.com/guide/platform/images/android-stack_2x.png)
