--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,11 +1,11 @@
 <!-- GFM-TOC -->
-* [第1章 开始启程——你的第一行Android代码](#第1章-开始启程——你的第一行Android代码)
-    * [1.1 了解全貌——Android王国简介](#1.1-了解全貌)
-    * [1.2 手把手带你搭建开发环境](#1.2-手把手带你搭建开发环境)
-    * [1.3 创建你的第一个Android项目](#1.3-创建你的第一个Android项目)
-    * [1.4 前行必备——掌握日志工具的使用](#1.4-前行必备——掌握日志工具的使用)
-    * [1.5 小结与点评](#1.5-小结与点评)
-* [第2章 先从看得到的入手——探究活动](#第2章-先从看得到的入手——探究活动)
+* [第1章 开始启程——你的第一行Android代码](#第1章-开始启程-你的第一行Android代码)
+    * [1.1 了解全貌——Android王国简介](#101-了解全貌-Android王国简介)
+    * [1.2 手把手带你搭建开发环境](#102-手把手带你搭建开发环境)
+    * [1.3 创建你的第一个Android项目](#103-创建你的第一个Android项目)
+    * [1.4 前行必备——掌握日志工具的使用](#104-前行必备——掌握日志工具的使用)
+    * [1.5 小结与点评](#105-小结与点评)
+* [第2章 先从看得到的入手——探究活动](#第2章-先从看得到的入手-探究活动)
     * [2.1 活动是什么](2.1活动是什么)
     * [2.2 活动的基本用法](2.2活动的基本用法)
     * [2.3 使用Intent在活动之间穿梭](2.3使用Intent在活动之间穿梭)
