--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,10 +1,10 @@
 <!-- GFM-TOC -->
 * [第1章 开始启程——你的第一行Android代码](#第1章-开始启程-你的第一行Android代码)
-    * [1.1 了解全貌——Android王国简介](#101-了解全貌-Android王国简介)
-    * [1.2 手把手带你搭建开发环境](#102-手把手带你搭建开发环境)
-    * [1.3 创建你的第一个Android项目](#103-创建你的第一个Android项目)
-    * [1.4 前行必备——掌握日志工具的使用](#104-前行必备——掌握日志工具的使用)
-    * [1.5 小结与点评](#105-小结与点评)
+    * [了解全貌——Android王国简介](#了解全貌-Android王国简介)
+    * [手把手带你搭建开发环境](#手把手带你搭建开发环境)
+    * [创建你的第一个Android项目](#创建你的第一个Android项目)
+    * [前行必备——掌握日志工具的使用](#前行必备——掌握日志工具的使用)
+    * [小结与点评](#小结与点评)
 * [第2章 先从看得到的入手——探究活动](#第2章-先从看得到的入手-探究活动)
     * [2.1 活动是什么](2.1活动是什么)
     * [2.2 活动的基本用法](2.2活动的基本用法)
