--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,5 +1,5 @@
 <!-- GFM-TOC -->
-* [第1章 开始启程——你的第一行Android代码](#第1章-开始启程-你的第一行Android代码)
+* [一、开始启程——你的第一行Android代码](#一开始启程-你的第一行Android代码)
     * [了解全貌——Android王国简介](#了解全貌-Android王国简介)
     * [手把手带你搭建开发环境](#手把手带你搭建开发环境)
     * [创建你的第一个Android项目](#创建你的第一个Android项目)
