--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,11 +1,11 @@
 <!-- GFM-TOC -->
-* [一、开始启程——你的第一行Android代码](#一开始启程-你的第一行Android代码)
-    * [了解全貌——Android王国简介](#了解全貌-Android王国简介)
+* [一、开始启程—你的第一行Android代码](#一开始启程你的第一行Android代码)
+    * [了解全貌—Android王国简介](#了解全貌Android王国简介)
     * [手把手带你搭建开发环境](#手把手带你搭建开发环境)
     * [创建你的第一个Android项目](#创建你的第一个Android项目)
-    * [前行必备——掌握日志工具的使用](#前行必备——掌握日志工具的使用)
+    * [前行必备——掌握日志工具的使用](#前行必备掌握日志工具的使用)
     * [小结与点评](#小结与点评)
-* [第2章 先从看得到的入手——探究活动](#第2章-先从看得到的入手-探究活动)
+* [二、先从看得到的入手——探究活动](#二先从看得到的入手探究活动)
     * [2.1 活动是什么](2.1活动是什么)
     * [2.2 活动的基本用法](2.2活动的基本用法)
     * [2.3 使用Intent在活动之间穿梭](2.3使用Intent在活动之间穿梭)
@@ -115,13 +115,13 @@
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
-# 第1章 开始启程——你的第一行Android代码
+# 第1章 开始启程—你的第一行Android代码
 
 2003年10月，Andy Rubin等人创办了Android公司，2005年8月谷歌收购了这家仅仅成立了22个月的公司，并让Andy Rubin继续负责Android项目。2008年谷歌推出了Android系统的第一个版本。
 
 由于谷歌的开发政策，任何手机厂商和个人都能免费获取到Android操作系统的源码，并且可以自由地使用和定制。
 
-## 1.1 了解全貌——Android王国简介
+## 1.1 了解全貌—Android王国简介
 
 ### 1.1.1 Android 系统架构
 
@@ -416,7 +416,7 @@ Gradle基于Groovy的领域特定语言(DSL)来声明项目设置。
 - 远程依赖。第二行的implementation则是远程依赖声明，其中com.android.support是域名部分，用于和其他公司的库做区分；appcompat-v7是组名称，用于和同一个公司中不同的库做区分；27.0.0是版本号，用于和同一个库中不同的版本做区分。声明后，Gradle会在构建项目时会首先检查一下本地是否已经有这个库的缓存，如果没有则会自动联网下载，然后在添加到项目的构建目录当中。
 - 库依赖。新建项目默认没有这个依赖，要使用它，需要创建一个和app模块的同级模块/库,然后在使用格式compile project(':helper')，即为依赖了创建的helper库。
 
-## 1.4 前行必备——掌握日志工具的使用
+## 1.4 前行必备—掌握日志工具的使用
 
 ### 1.4.1 使用Android的日志工具Log
 
