--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,11 +1,11 @@
 <!-- GFM-TOC -->
-* [一、开始启程—你的第一行Android代码](#一开始启程你的第一行Android代码)
+* [一、开始启程—你的第一行Android代码](#一开始启程)
     * [了解全貌—Android王国简介](#了解全貌Android王国简介)
     * [手把手带你搭建开发环境](#手把手带你搭建开发环境)
     * [创建你的第一个Android项目](#创建你的第一个Android项目)
-    * [前行必备——掌握日志工具的使用](#前行必备掌握日志工具的使用)
+    * [前行必备—掌握日志工具的使用](#前行必备掌握日志工具的使用)
     * [小结与点评](#小结与点评)
-* [二、先从看得到的入手——探究活动](#二先从看得到的入手探究活动)
+* [二、先从看得到的入手—探究活动](#二先从看得到的入手探究活动)
     * [2.1 活动是什么](2.1活动是什么)
     * [2.2 活动的基本用法](2.2活动的基本用法)
     * [2.3 使用Intent在活动之间穿梭](2.3使用Intent在活动之间穿梭)
@@ -458,5 +458,5 @@ Log可以使用logd快速生成模块代码，并且，在方法外面输入logt
 
 本章我们认识了Android系统，搭建了开发环境，并且创建了自己的第一个Android项目，对AS的目录结构和执行过程有了一定的认识，最后，学习了日志工具的使用，your are so good！
 
-# 一、先从看的到的入手—探究活动
+# 二、先从看的到的入手—探究活动
 
