--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,5 +1,5 @@
 <!-- GFM-TOC -->
-* [一、开始启程—你的第一行Android代码](#一开始启程)
+* [一、开始启程—你的第一行Android代码](#一开始启程你的第一行Android代码)
     * [了解全貌—Android王国简介](#了解全貌Android王国简介)
     * [手把手带你搭建开发环境](#手把手带你搭建开发环境)
     * [创建你的第一个Android项目](#创建你的第一个Android项目)
@@ -115,7 +115,7 @@
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
-# 一、 开始启程—你的第一行Android代码
+# 一、开始启程—你的第一行Android代码
 
 2003年10月，Andy Rubin等人创办了Android公司，2005年8月谷歌收购了这家仅仅成立了22个月的公司，并让Andy Rubin继续负责Android项目。2008年谷歌推出了Android系统的第一个版本。
 
