--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -7,11 +7,11 @@
 * [二、先从看得到的入手—探究活动](#二先从看得到的入手探究活动)
     * [活动是什么](#活动是什么)
     * [活动的基本用法](#活动的基本用法)
-    * [使用Intent在活动之间穿梭](#使用Intent在活动之间穿梭)
+    * [使用Intent在活动之间穿梭](#使用intent在活动之间穿梭)
     * [活动的生命周期](#活动的生命周期)
     * [活动的启动模式](#活动的启动模式)
     * [活动的最佳实践](#活动的最佳实践)
-* [三、软件也要拼脸蛋——UI开发的点点滴滴](#三软件也要拼脸蛋-UI开发的点点滴滴)
+* [三、软件也要拼脸蛋——UI开发的点点滴滴](#三软件也要拼脸蛋-ui开发的点点滴滴)
     * [详解4中基本布局](3.3详解4中基本布局)
     * [系统控件不够用？创建自定义控件](3.4系统控件不够用？创建自定义控件)
     * [最常用和最难用的控件——ListView](3.5最常用和最难用的控件——ListView)
