--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1,16 +1,16 @@
     <!-- GFM-TOC -->
 * [一、开始启程—你的第一行Android代码](#一开始启程你的第一行android代码)
 * [二、先从看得到的入手—探究活动](#二先从看得到的入手探究活动)
-* [六、数据存储全方案——详解持久化技术](六数据存储全方案——详解持久化技术)
-* [七、跨程序共享数据——探究内容提供器](七跨程序共享数据——探究内容提供器)
-* [八、丰富你的程序——运用手机多媒体](八丰富你的程序——运用手机多媒体)
-* [九、看看精彩的世界——使用网络技术](九看看精彩的世界——使用网络技术)
-* [十、后台默默的劳动者——探究服务](十、后台默默的劳动者——探究服务)
-* [十一、Android特色开发——基于位置的服务](十一Android特色开发——基于位置的服务)
-* [十二、最佳的UI体验——MaterialDesign实战](#十二最佳的UI体验——MaterialDesign实战)
-* [十三、继续进阶——你还应该掌握的高级技巧](十三继续进阶——你还应该掌握的高级技巧)
-* [十四、进入实战——开发酷欧天气](十四进入实战——开发酷欧天气)
-* [十五、最后一步——将应用发布到360应用商店](十五最后一步——将应用发布到360应用商店)
+* [三、数据存储全方案——详解持久化技术](六数据存储全方案——详解持久化技术)
+* [四、跨程序共享数据——探究内容提供器](七跨程序共享数据——探究内容提供器)
+* [五、丰富你的程序——运用手机多媒体](八丰富你的程序——运用手机多媒体)
+* [六、看看精彩的世界——使用网络技术](九看看精彩的世界——使用网络技术)
+* [七、后台默默的劳动者——探究服务](十、后台默默的劳动者——探究服务)
+* [八、Android特色开发——基于位置的服务](十一Android特色开发——基于位置的服务)
+* [九、最佳的UI体验——MaterialDesign实战](#十二最佳的UI体验——MaterialDesign实战)
+* [十、继续进阶——你还应该掌握的高级技巧](十三继续进阶——你还应该掌握的高级技巧)
+* [十一、进入实战——开发酷欧天气](十四进入实战——开发酷欧天气)
+* [十二、最后一步——将应用发布到360应用商店](十五最后一步——将应用发布到360应用商店)
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
@@ -551,3 +551,175 @@ Windows系统：打开Git Bash
 - Activity类中的getPreferences()方法，使用当前活动的类名作为文件名。
 - PreferenceManager类中的getDefaultSharedPreferences()方法，使用当前应用程序的包名作为前缀来命名文件名。
 
+### SQLite数据库存储
+
+#### 创建数据库
+
+Android提供了SQLiteOpenHelper帮助类对数据库进行创建和升级，继承它，重写onCreate()和onUpgrade()方法去实现创建、升级数据库的逻辑。（数据库文件存放在/data/data/<package name>/databases/目录下）
+
+SQLiteOpenHelper创建或打开一个现有的数据库：
+
+- getReadableDatabase()
+- getWriteableDatabase()
+
+注意：当书记库不可写入的时候（如磁盘空间已满），getReadableDatabase()方法返回的对象将以只读的方式去打开数据库，而getWritableDatabase()方法则将出现异常。
+
+建表语句：新建一张Book表，表中有id（主键）、作者、价格、页数和书名等列。
+SQLite的数据类型很简单，integer表示整形，real表示浮点型，text表示文本类型，并用autoincrement关键字表示id列是自增长的。
+
+    create table Book (
+        id integer primary key autoincrement,
+        author text,
+        price real,
+        pages integer,
+        name text)
+        
+在onCreate()方法中执行建表语句：
+
+    db.execSQL(CREATE_BOOK)；
+    
+#### 升级数据库
+
+当我们新添加一张表时，需要升级数据库，在onCreate()方法中多添加一条建表语句：
+
+    db.execSQL(CREATE_BOOK);
+    db.execSQL(CREATE_CATEGORY);
+    
+在onUpgrade()方法中添加以下代码：
+
+    db.execSQL("drop table if exists Book");
+    db.execSQL("drop table if exists Category");
+    onCreate(db);
+    
+增加数据库版本号即可回调onUpgrade()方法重新建表：
+
+    dbHelper = new MyDatabaseHelper(this, "BookStore.db", null, 2);
+    
+#### 添加数据
+
+SQLiteDatabase中提供了一个inset()方法，第一个参数是表名，第二个参数用于在未指定添加数据的情况下给某些可为空的列自动赋值NULL，一般我们用不到这个功能，直接传入null即可。第三个参数是ContentValues对象，使用它的put()方法添加数据即可。
+
+    SQLiteDatabase db = dbHelper.getWritableDatabase();
+    ContentValues values = new ContentValues();
+    //开始组装第一条数据
+    values.put("name", "The Da Vinci Code");
+    values.put("author", "Dan Brown");
+    values.put("pages", 454);
+    values.put("price", 16.96);
+    db.insert("Book", null, values);//插入第一条数据
+    values.clear();
+    //开始组装第二条数据
+    values.put("name", "The Lost Symbol");
+    values.put("author", "Dan Brown");
+    values.put("pages", 510);
+    values.put("price", 19.95);
+    db.insert("Book", null, values);//插入第二条数据
+    
+#### 更新数据
+
+同理，update()方法用于对数据进行更新，第一个参数为表名，第二个参数是ContentValues对象，第三、四个参数用于约束更新某一行或某几行中的数据，不指定的话默认就是更新所有行。
+
+    SQLiteDatabase db = dbHelper.getWritableDatabase();
+    ContentValues values = new ContentValues();
+    values.put("price", 10.99);
+    db.update("Book", values, "name = ?", new String[] {"The Da Vinci Code"})；
+    
+第三个采纳数对应的是SQL语句的where部分，表示更新所有name等于?的行，而?是一个占位符，可以通过第四个参数提供的一个字符串数组为第三个参数中的每个占位符指定相应的内容。
+
+#### 删除数据
+
+delete()方法用于删除数据，第一参数是表名，第二、三个参数用于约束删除某一行或某几行的数据，不指定的话默认就是删除所有行。
+
+    SQLiteDatabase db = dbHelper.getWriteDatabase();
+    db.delete("Book", "pages > ?", new String[] {"500"});
+    
+#### 查询数据
+
+query()方法用于查询数据。最短的方法重载有7个参数，第一个参数是表名，第二个参数用于指定去查询哪几列，如果不指定则默认查询所有列。第三、四个参数用于约束查询某一行或某几行的数据，不指定则默认查询所有行的数据。第五个参数用于指定需要去group by的列，不指定则表示不对查询结果进行group by操作。第六个参数用于对group by之后的数据进行进一步过滤，不指定则表示不进行过滤。第七个参数用于指定查询结果的排序方式，不指定的话则表示使用默认的排序方式。
+
+    query()方法参数         对应SQL部分                 描述
+      table             from table_name             指定查询的表名
+      columns           select column1,column2      指定查询的列名
+      selection         where column = value        指定where的约束条件
+      selectionArgs     -                           为where中的占位符提供具体的值
+      groupBy           group by colum              指定需要group by的列
+      having            having column = value       对group by后的结果进一步约束
+      orderBy           order by column1，column2   指定查询结果的排序方式
+      
+    SQLiteDatabase db = dbHelper.getWritableDatabase();
+    //查询Book表中所有的数据
+    Cursor cursor = db.query("Book", null, null, null, null, null, null);
+    if (cursor.moveToFirst()) {
+        do {
+            //遍历Cursor对象
+            String name = cursor.getString(cursor.getColumnIndex("name"));
+            String author = cursor.getString(cursor.getColumnIndex("author"));
+            int pages = cursor.getInt(cursor.getColumnIndex("pages"));
+            double price = cursor.getDouble(cursor.getColumnIndex("price"));
+        } while (cursor.moveToNext());
+    }
+    cursor.close
+    
+#### 使用SQL操作数据库
+
+- 添加数据的方法如下：
+
+    db.execSQL("insert into Book (name, author, pages, price) values(?, ?, ?, ?)", new String[] {"The Da Vinci Code", "Dan Brown", "454", "16.96"});
+    
+    db.execSQL("insert into Book (name, author, pages, price) values(?, ?, ?, ?)", new String[] {"The Lost Symbol", "Dan Brown", "510", "19.95"});
+    
+- 更新数据的方法如下：
+
+    db.execSQL("update Book set price = ? where name = ?", new String[] {"10.99", "The Da Vinci Code"});
+    
+- 删除数据的方法如下：
+
+    db.execSQL("delete from Book where pages > ?", new String[] {"500"});
+    
+- 查询数据的方法如下：
+
+    db.rawQuery("select * from Book", null);
+    
+# 四、跨程序共享数据——内容提供器
+
+## 运行时权限
+
+Android 6.0以上权限分为普通权限和危险权限。危险权限共9组24个。
+
+注意：每个危险权限都属于一个权限组，我们在进行运行时权限处理时使用的是权限名，但是用户一旦同意授权了，那么该权限组所对应的权限中所有的其他权限也会同时被授权。
+
+### 在程序运行时申请权限
+
+    if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.
+        permission.CALL_PHONE) != PackageManager.PERMISSION_GRANTED) {
+        ActivityCompat.requestPermissions(MainActivity.this, new 
+            String[]{Manifest.permission.CALL_PHONE}, 1)；
+    } else {
+        call();
+    }
+    
+    private void call() {
+        try {
+            Intent intent = new Intent(Intent.ACTION_CALL);
+            intent.setData(Uri.parse("tel:10086"));
+            startActivity(intent);
+        } catch (SecurityException e) {
+            e.printStackTrace();
+        }
+    }
+    
+    @Override
+    public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) {
+        switch (requestCode) {
+            case 1:
+                if (grantResults.length > 0 && grantResults[0] == PackageManager.PERMISSION_GRANTED) {
+                    call();
+                } else {
+                    Toast.makeTest(this, "You denied the permission", Toast.LENGTH_SHORT).show();
+                }
+                break;
+            default:
+                break;
+        }
+    }
+    
