--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -2,7 +2,7 @@
 * [一、开始启程—你的第一行Android代码](#一开始启程你的第一行android代码)
 * [二、先从看得到的入手—探究活动](#二先从看得到的入手探究活动)
 * [三、数据存储全方案——详解持久化技术](#三数据存储全方案详解持久化技术)
-* [四、跨程序共享数据——探究内容提供器](#四跨程序共享数据探究内容提供器)
+* [四、跨程序共享数据——探究内容提供器](#四跨程序共享数据内容提供器)
 * [五、丰富你的程序——运用手机多媒体](八丰富你的程序——运用手机多媒体)
 * [六、看看精彩的世界——使用网络技术](九看看精彩的世界——使用网络技术)
 * [七、后台默默的劳动者——探究服务](十、后台默默的劳动者——探究服务)
