add computer network

--- a/notes/计算机网络：自顶向下方法(原书第6版).md
+++ b/notes/计算机网络：自顶向下方法(原书第6版).md
@@ -36,3 +36,37 @@
 
 ### 服务描述
 
+- 涉及多台相互交换数据的端系统被称为分布式应用程序。
+
+### 什么是协议
+
+- 为了完成一项工作，要求两个（或多个）通信实体运行相同的协议。
+
+#### 网络协议
+
+- 在两台物理上连接的计算机中，硬件实现的协议控制了在两块网络接口卡间的“线上”的比特流；在端系统中，拥塞控制协议控制了在发送方和接收方之间传输的分组发送的速率。
+- 一个协议定义了在两个或多个通信实体之间交换的报文格式和次序，以及报文发送和/或接收一条报文或其他事件所采取的动作。
+- 掌握计算机网络领域知识的过程就是理解网络协议的构成、原理和工作方式的过程。
+
+## 网络边缘
+
+- 主机有时又被进一步划分为两类：客户和服务器。
+
+### 接入网
+
+- 接入网是指将端系统连接到其边缘路由器的物理链路。边缘路由器是端系统到任何其他远程端系统的路径上的第一台路由器。
+
+#### 使用接入网的几种环境
+
+##### 1.家庭接入：DSL、电缆、FTTH、拨号和卫星
+
+宽带住宅接入有两种最流行的类型：**数字用户线DSL**和**电缆**。
+
+每个用户的DSL调制解调器使用现有的电话线（双绞铜线）与位于本地电话公司的本地中心局CO中的数字用户线接入复用器DSLAM来交换数据。家庭的DSL调制解调器得到数字数据后将其转换为高频音，以通过电话线传输给本地中心局；来自许多家庭的模拟信号在DSLAM处被转换回数字形式。
+
+家庭电话线同时承载了数据和传统的电话信号，它们编码为不同的频率（频分复用技术）：
+
+- 高速下行信道，位于50kHz到1MHz频段；
+- 中速上行信道，位于4kHz到50kHz频段；
+- 普通的双向电话信道，位于0到4kHz频段。
+
