--- a/notes/计算机网络：自顶向下方法(原书第6版).md
+++ b/notes/计算机网络：自顶向下方法(原书第6版).md
@@ -36,7 +36,7 @@
 
 ### 服务描述
 
-- 涉及多台相互交换数据的端系统被称为分布式应用程序。
+- 涉及多台相互交换数据的端系统被称为**分布式应用程序**。
 
 ### 什么是协议
 
@@ -50,7 +50,7 @@
 
 ## 网络边缘
 
-- 主机有时又被进一步划分为两类：客户和服务器。
+- 主机有时又被进一步划分为两类：**客户**和**服务器**。
 
 ### 接入网
 
@@ -62,7 +62,7 @@
 
 宽带住宅接入有两种最流行的类型：**数字用户线DSL**和**电缆**。
 
-每个用户的DSL调制解调器使用现有的电话线（双绞铜线）与位于本地电话公司的本地中心局CO中的数字用户线接入复用器DSLAM来交换数据。家庭的DSL调制解调器得到数字数据后将其转换为高频音，以通过电话线传输给本地中心局；来自许多家庭的模拟信号在DSLAM处被转换回数字形式。
+每个用户的DSL调制解调器使用现有的电话线（双绞铜线）与位于本地电话公司的本地中心局CO中的**数字用户线接入复用器DSLAM**来交换数据。家庭的DSL调制解调器得到数字数据后将其转换为高频音，以通过电话线传输给本地中心局；来自许多家庭的模拟信号在DSLAM处被转换回数字形式。
 
 家庭电话线同时承载了数据和传统的电话信号，它们编码为不同的频率（频分复用技术）：
 
