add computer network

--- a/notes/计算机网络：自顶向下方法(原书第6版).md
+++ b/notes/计算机网络：自顶向下方法(原书第6版).md
@@ -70,3 +70,33 @@
 - 中速上行信道，位于4kHz到50kHz频段；
 - 普通的双向电话信道，位于0到4kHz频段。
 
+一般而言，如果住宅不是位于本地中心局的5~10英里范围内，该住宅必须求助于其他形式的因特网接入。
+
+###### FTTH因特网接入
+
+从本地中心局直接到家庭提供了一条光纤路径，即光纤到户。
+
+从本地中心局到家庭有几种竞争性的光纤分布方案。最简单的光纤分部网络称为直接光纤，从本地中心局到每户设置一根光纤。更为一般的是，从中心局出来的每根光纤实际上由许多家庭共享，直到相对接近这些家庭的位置，该光纤才分成每户一根光纤。
+
+进行这种划分的有两种竞争性的光纤分布体系结构：
+
+- 主动光纤网络AON
+- 被动光纤网络PON
+
+每个家庭具有一个光纤网络端接器ONT，它由专门的光纤连接到邻近的分配器。该分配器把一些家庭(通常少于100个)集结到一根共享的光纤，该光纤再连接到本地电话和公司的中心局的光纤线路端接器OLT。该OLT提供了光信号和电信号的转换。
+
+![image](https://images2015.cnblogs.com/blog/669116/201704/669116-20170410225535876-487463393.jpg)
+
+另外两种接入网技术为家庭提供因特网接入：
+
+- 卫星链路（超过1Mbps）
+- 拨号接入（56kbps）
+
+##### 企业（和家庭）接入：以太网和WIFI
+
+使用以太网接入，用户通常以100Mbps速率接入以太网交换机，而服务器可能具有1Gbps甚至10Gbps的接入速率。
+
+![image](https://images2015.cnblogs.com/blog/669116/201704/669116-20170410225536422-1388971753.jpg)
+
+一个无线LAN用户通常必须位于接入点几十米范围内。基于IEEE 802.11技术的无线LAN接入，更为通俗地成为WIFI。
+
